@@ -1,3 +1,8 @@
+2004-01-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* crtstuff.c (frame_dummy, __do_global_ctors_1): Call
+	_Jv_RegisterClasses through a function pointer.
+
 2003-02-09  Richard Henderson  <rth@redhat.com>
 
 	* libgcc-std.ver (__clztf2): New.
